# vm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  commands.txt  conversions.h  initial_vm.c  initialize.c  macros.h  structs.h  system.h  tasks.txt  userapp.c  userapp.h  vm.c  vm.ilk
build-dir/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  vm.sln  vm.vcxproj  vm.vcxproj.filters
debug logs/debug day 1/: debug.txt.txt
debug logs/debug day 3/: debug.txt.txt
debug logs/debug day 5/: debug.txt.txt
debug logs/debug day 6/: debug.txt.txt
debug_tools/: debug_tools.c  structs.h
debug_tools/build-dir/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  debug_tools.sln  vm.vcxproj  vm.vcxproj.filters
include/: console.h  debug.h  hardware.h  macros.h  pagefile.h  pfn.h  pfn_lists.h  pte.h  scheduler.h  structs.h  system.h  userapp.h  vm.h
src/: console.c  debug.c  initialize.c  locks.c  mod_writer.c  pagefile.c  pfn.c  pfn_lists.c  pte.c  scheduler.c  structs.c  trimmer.c  userapp.c  vm.c
